--- a/Simulations/high_cad_data.yaml
+++ b/Simulations/high_cad_data.yaml
@@ -3,7 +3,7 @@ DATASET:
     NAME: tester
     PARAMETERS:
         SIZE: 5000
-        SEED: 7
+        SEED: 6
         OUTDIR: high_cad_data
         
 COSMOLOGY:
@@ -83,6 +83,14 @@ SPECIES:
                 n_sersic: 0.0 # Overwritten by USERDIST
                 e1: 0.0 # Overwritten by USERDIST
                 e2: 0.0 # Overwritten by USERDIST
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
                     
     GALAXY_3:
         NAME: SOURCE_off_axis
@@ -106,6 +114,15 @@ SPECIES:
                         PARAMETERS:
                             r1: 1.0
                             r2: 4.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
+
                                 
     GALAXY_4:
         NAME: DarkGalaxy
@@ -119,6 +136,15 @@ SPECIES:
                 e2: 0.0
                 center_x: 0.0
                 center_y: 0.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
+
         SHEAR_PROFILE_1: 
             NAME: SHEAR
             PARAMETERS:
@@ -305,6 +331,10 @@ GEOMETRY:
             OBJECT_3: SOURCE_off_axis
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal']
@@ -372,7 +402,10 @@ GEOMETRY:
             OBJECT_2: Gal
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
-
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal']
@@ -421,6 +454,11 @@ GEOMETRY:
             OBJECT_4: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal']
@@ -491,6 +529,11 @@ GEOMETRY:
             OBJECT_3: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal']
@@ -522,6 +565,12 @@ GEOMETRY:
             OBJECT_2: Gal2
             PARAMETERS: 
                 REDSHIFT: 0.1                    
+
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal2']
@@ -543,6 +592,11 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal2']
@@ -562,6 +616,12 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60] 
             OBJECTS: ['Gal2']
@@ -579,6 +639,11 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60]
             OBJECTS: ['normalSNIa']
@@ -602,6 +667,11 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60]
             OBJECTS: ['normalSNCC']
