--- a/Simulations/lsst_data.yaml
+++ b/Simulations/lsst_data.yaml
@@ -83,6 +83,14 @@ SPECIES:
                 n_sersic: 0.0 # Overwritten by USERDIST
                 e1: 0.0 # Overwritten by USERDIST
                 e2: 0.0 # Overwritten by USERDIST
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
                     
     GALAXY_3:
         NAME: SOURCE_off_axis
@@ -106,6 +114,14 @@ SPECIES:
                         PARAMETERS:
                             r1: 1.0
                             r2: 4.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
                                 
     GALAXY_4:
         NAME: DarkGalaxy
@@ -117,6 +133,14 @@ SPECIES:
                 n_sersic: 0.5
                 e1: 0.0
                 e2: 0.0
+                center_x: 0.0
+                center_y: 0.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
                 center_x: 0.0
                 center_y: 0.0
         SHEAR_PROFILE_1: 
@@ -305,6 +329,11 @@ GEOMETRY:
             OBJECT_3: SOURCE_off_axis
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
+
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal']
@@ -372,7 +401,10 @@ GEOMETRY:
             OBJECT_2: Gal
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
-
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal']
@@ -421,6 +453,10 @@ GEOMETRY:
             OBJECT_4: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal']
@@ -491,6 +527,10 @@ GEOMETRY:
             OBJECT_3: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal']
@@ -521,7 +561,11 @@ GEOMETRY:
             OBJECT_1: DarkGalaxy
             OBJECT_2: Gal2
             PARAMETERS: 
-                REDSHIFT: 0.1                    
+                REDSHIFT: 0.1 
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0                   
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal2']
@@ -543,6 +587,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal2']
@@ -562,6 +610,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['Gal2']
@@ -579,6 +631,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['normalSNIa']
@@ -602,6 +658,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: lsst_cadence.yaml
             OBJECTS: ['normalSNCC']
