--- a/Simulations/des_deep_data.yaml
+++ b/Simulations/des_deep_data.yaml
@@ -86,7 +86,14 @@ SPECIES:
                 n_sersic: 0.0 # Overwritten by USERDIST
                 e1: 0.0 # Overwritten by USERDIST
                 e2: 0.0 # Overwritten by USERDIST
-                    
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0                    
     GALAXY_3:
         NAME: SOURCE_off_axis
         LIGHT_PROFILE_1:
@@ -109,6 +116,14 @@ SPECIES:
                         PARAMETERS:
                             r1: 1.0
                             r2: 4.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
+                center_x: 0.0
+                center_y: 0.0
                                 
     GALAXY_4:
         NAME: DarkGalaxy
@@ -120,6 +135,14 @@ SPECIES:
                 n_sersic: 0.5
                 e1: 0.0
                 e2: 0.0
+                center_x: 0.0
+                center_y: 0.0
+        MASS_PROFILE_1:
+            NAME: SIE
+            PARAMETERS:
+                theta_E: 1.0 # Overwritten by USERDIST
+                e1: 0.0 # Overwritten by USERDIST
+                e2: 0.0 # Overwritten by USERDIST
                 center_x: 0.0
                 center_y: 0.0
         SHEAR_PROFILE_1: 
@@ -308,6 +331,10 @@ GEOMETRY:
             OBJECT_3: SOURCE_off_axis
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal']
@@ -375,6 +402,10 @@ GEOMETRY:
             OBJECT_2: Gal
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
 
         TIMESERIES:
             NITES: des_deep_cadence.yaml
@@ -424,6 +455,10 @@ GEOMETRY:
             OBJECT_4: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal']
@@ -494,6 +529,10 @@ GEOMETRY:
             OBJECT_3: Star
             PARAMETERS:
                 REDSHIFT: 0.5 # Overwritten by USERDIST
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal']
@@ -524,7 +563,11 @@ GEOMETRY:
             OBJECT_1: DarkGalaxy
             OBJECT_2: Gal2
             PARAMETERS: 
-                REDSHIFT: 0.1                    
+                REDSHIFT: 0.1
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0                    
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal2']
@@ -546,6 +589,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal2']
@@ -565,6 +612,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.001
                             maximum: 0.01
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['Gal2']
@@ -582,6 +633,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['normalSNIa']
@@ -605,6 +660,10 @@ GEOMETRY:
                         PARAMETERS:
                             minimum: 0.03
                             maximum: 0.8
+        PLANE_2:
+            OBJECT_1: DarkGalaxy
+            PARAMETERS:
+                REDSHIFT: 2.0
         TIMESERIES:
             NITES: des_deep_cadence.yaml
             OBJECTS: ['normalSNCC']
